# mirrordoc

./: .gitignore  .mirrordoc.json  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: structure-model.md
examples/: README.md
examples/demo-docs/: README.ja.md  README.md  README.zh.md
examples/demo-docs/docs/: guide.md
examples/demo-docs/docs/ja/: guide.md
scripts/: smoke.sh
src/mirrordoc/: __init__.py  __main__.py  cli.py  config.py  errors.py  gitio.py  mdparse.py  outline.py  pairs.py  report.py  staleness.py  structdiff.py
tests/: conftest.py  test_cli.py  test_config.py  test_mdparse.py  test_pairs.py  test_report.py  test_staleness.py  test_structdiff.py
